force-app/main/default/objects/Country_Currency__mdt/Country_Currency__mdt.object-meta.xml
<CustomObject>
    <label>Country Currency</label>
    <pluralLabel>Country Currencies</pluralLabel>
</CustomObject>