force-app/main/default/objects/Country_Currency__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Uncheck to retire a mapping without deleting it.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>