force-app/main/default/objects/Country_Currency__mdt/fields/Country_Name__c.field-meta.xml
<CustomField>
    <fullName>Country_Name__c</fullName>
    <description>Operation country value. Matches Opportunity.Operation_Country__c (e.g. Indonesia, Japan).</description>
    <label>Country Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>