force-app/main/default/objects/Country_Currency__mdt/fields/Currency_ISO_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_ISO_Code__c</fullName>
    <description>Default ISO-4217 currency for the operation country. Must be an ACTIVE org currency.</description>
    <label>Currency ISO Code</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>