force-app/main/default/objects/Country_Currency__mdt/fields/ISO_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>ISO_Country_Code__c</fullName>
    <description>ISO-3166 alpha-2 code. Matches Site__c.Country__c (e.g. ID, JP) for the Quote-vs-site currency rule.</description>
    <label>ISO Country Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>